--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.idea*
 
 # Runtime data
 pids
@@ -33,7 +34,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+node_modules*
 jspm_packages/
 
 # TypeScript v1 declaration files
